plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.1.0'
}

group 'stepanovep'
version '23.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.seleniumhq.selenium:selenium-java:4.5.3'
    implementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.5.3'
    implementation 'org.seleniumhq.selenium:selenium-support:4.5.3'
    implementation 'org.seleniumhq.selenium:selenium-api:4.5.3'
    implementation 'org.seleniumhq.selenium:selenium-remote-driver:4.5.3'

    implementation 'org.jsoup:jsoup:1.15.3'

    implementation 'org.springframework.retry:spring-retry:1.3.4'
    implementation 'org.springframework:spring-aspects:5.3.23'

    implementation 'org.springframework.kafka:spring-kafka:2.9.0'

    implementation 'net.gcardone.junidecode:junidecode:0.4.1'

    implementation 'org.telegram:telegrambots:6.1.0'
    implementation 'org.telegram:telegrambotsextensions:6.1.0'

    implementation 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.springframework.kafka:spring-kafka-test:2.9.0'
}

test {
    useJUnitPlatform()
}
